# cyber-mag-py

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  utils.py
.github/workflows/: tests.yml
hw1/: 1.py  2.py  p1.py  p2.py
hw2/: p1.py
hw3/: p1.py  p2.py
hw4/: p1.py
hw5/: p1.py
hw6/: p1.py
tests/: test_2.py
tests/hw1/: test_1.py  test_2.py
tests/hw3/: test_1.py  test_2.py
tests/hw4/: test_1.py
tests/hw6/: __init__.py  test_account.py  test_transaction.py  test_transaction_history.py
